[tool.poetry]
name = "pycoinglass"
version = "0.1.0"
description = ""
authors = ["ko0hi <ko0hi.4731@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.0"
requests = "^2.27.1"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
ipykernel = "^6.13.1"
jupyter = "^1.0.0"
matplotlib = "^3.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
